[gd_scene load_steps=15 format=3 uid="uid://lhxvech2dovd"]

[ext_resource type="Script" path="res://base_level.gd" id="1_i2ccr"]
[ext_resource type="PackedScene" uid="uid://dg3rm1coyrnis" path="res://RayPickerCamera/ray_picker_camera.tscn" id="1_o0cxu"]
[ext_resource type="Texture2D" uid="uid://csqphpoynjubs" path="res://kenney_prototype-textures/Vector/texture_08.svg" id="2_apdau"]
[ext_resource type="Script" path="res://boat_manager.gd" id="2_h3xsi"]
[ext_resource type="PackedScene" uid="uid://brk2p6bvxe20r" path="res://grid_map.tscn" id="3_1ohpt"]
[ext_resource type="PackedScene" uid="uid://c2yxhd1w7tb60" path="res://Boats/small_boat.tscn" id="3_pvxw5"]
[ext_resource type="PackedScene" uid="uid://dekylbw61q2f4" path="res://Boats/boat_4.tscn" id="4_bc6bj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hx2ue"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_mfpqd"]
sky_material = SubResource("ProceduralSkyMaterial_hx2ue")

[sub_resource type="Environment" id="Environment_kuyfa"]
background_mode = 2
sky = SubResource("Sky_mfpqd")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mgmue"]
albedo_color = Color(3.65794e-06, 0.630794, 0.971043, 1)
albedo_texture = ExtResource("2_apdau")

[sub_resource type="LabelSettings" id="LabelSettings_ltwcd"]
font_size = 90
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4yaae"]
font_size = 64
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h15kj"]
font_size = 64

[node name="BaseLevel" type="Node3D"]
script = ExtResource("1_i2ccr")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kuyfa")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.962034, 0)
use_collision = true
size = Vector3(32, 2, 32)
material = SubResource("StandardMaterial3D_mgmue")

[node name="GridMap" parent="." instance=ExtResource("3_1ohpt")]

[node name="Ground2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.962034, 56.0203)
use_collision = true
size = Vector3(32, 2, 32)
material = SubResource("StandardMaterial3D_mgmue")

[node name="OpponentGridMap" parent="." instance=ExtResource("3_1ohpt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 56.0203)

[node name="BoatManager" type="Node3D" parent="."]
script = ExtResource("2_h3xsi")
boat_1 = ExtResource("3_pvxw5")
boat_4 = ExtResource("4_bc6bj")

[node name="RayPickerCamera" parent="." node_paths=PackedStringArray("grid_map", "boat_manager") instance=ExtResource("1_o0cxu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 25, 0.02)
grid_map = NodePath("")
boat_manager = NodePath("../BoatManager")

[node name="MenuScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MenuScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuScreen/CenterContainer"]
custom_minimum_size = Vector2(1100, 1000)
layout_mode = 2
color = Color(0, 0, 0, 0.596078)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuScreen/CenterContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MenuScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"
label_settings = SubResource("LabelSettings_ltwcd")

[node name="Label" type="Label" parent="MenuScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press \"b\" to toggle build mode"
label_settings = SubResource("LabelSettings_4yaae")

[node name="Label2" type="Label" parent="MenuScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "\"1\" - switch to boat 1
\"4\" - switch to boat 4
\"r\" - rotate

Click to place ship
Click again to remove"
label_settings = SubResource("LabelSettings_4yaae")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Press Esc for menu and controls"
label_settings = SubResource("LabelSettings_h15kj")
